fixed spacing, added summary text, tried something different with navbar

--- a/src/App.css
+++ b/src/App.css
@@ -53,8 +53,7 @@
   ul.mb-2{
     display: inline-flex;
     list-style: none;
-    margin-left: 5%;
-
+    /* margin-left: 5%; */
   }
 
   /* footer icons */
@@ -68,7 +67,7 @@
   /*About me image*/
   img#face-img.navigation{
     float:left;
-    margin-left:5%;
+    /* margin-left:5%; */
     margin-right: 20px;
     max-width: 200px;
     max-height: 200px;
@@ -90,7 +89,7 @@
   }
 
   div.textDescriptions{
-    margin-left: 25%;
+    margin-left: 200px;
   }
 
 /*PORTFOLIO PAGE SECTION  */
